deploy/k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-frontend
  namespace: atlas-dev
  labels:
    app.kubernetes.io/name: atlas-frontend
    app.kubernetes.io/part-of: atlas-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: atlas-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: atlas-frontend
        app.kubernetes.io/part-of: atlas-platform
    spec:
      containers:
        - name: atlas-frontend
          image: 307946673392.dkr.ecr.us-east-1.amazonaws.com/atlas-dev-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
